# Sociolegal-Lab.github.io

./: LICENSE
backend/: .gitignore  pyproject.toml
backend/app/: main.py
docs/: intro.html  leaderBoard.html  member.html  project.html
docs/assets/css/: intro.css  leaderBoard.css  main2.css  sub-page.css
docs/assets/data/: accuracy-balanced.csv  mae_Vaccination Mandates.csv  mae_Vaccine Hesitancy.csv  mae_Vaccine Perception.csv
docs/assets/js/: leaderBoard.js
frontend/: .gitignore
frontend/assets/data/: accuracy-unbalanced.csv  standard-deviation-balanced.csv  standard-deviation-unbalanced.csv
frontend/pages/: contact.html  index.html  member.html
